# Dinesh_GUI

./: .gitignore  CMakeLists.txt  CenterPanel.qml  DeviceStatusBlock.qml  ForagingPopup.qml  LoginPage.qml  NeoButton.qml  README.md  StatusPill.qml  TaskAllocationPopup.qml  icons.qrc  mapbridge.cpp  sim_shapes.py
Smart_Atonomous_Robot_2026-04-04/: BasePage.qml  DeviceCameraBlock.qml  GlassCard.qml  MaximizedViewScreen.qml  NavPageScreen.qml  PanelHeader.qml  SYRS.docx  SensorScreen.qml  SimulationConfigPopup.qml  TeleOpScreen.qml  Theme.qml  Tooltip.qml  main.cpp  main.qml  mapbridge.h
